--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.4",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
