--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@prisma/client": "^5.14.0",
+    "@react-email/components": "0.0.18",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^2.1.3",
     "sharp": "^0.33.4",
     "zustand": "^4.5.2"
   },
