--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.1",
     "@prisma/client": "^5.14.0",
     "@react-email/components": "0.0.18",
+    "@vercel/blob": "^0.23.3",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
