--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-email": "^2.1.3",
+    "resend": "^3.2.0",
     "sharp": "^0.33.4",
     "zustand": "^4.5.2"
   },
