--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.14.0",
     "@react-email/components": "0.0.18",
     "@vercel/blob": "^0.23.3",
+    "express-rate-limit": "^7.2.0",
     "next": "14.2.3",
     "nodemailer": "^6.9.13",
     "react": "^18",
